change page title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CodeTyper</title>
+    <title>John Lozier - Codetyper</title>
   </head>
   <body>
     <div id="root"></div>
